--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anees Kokadan</title>
  </head>
  <body>
     <h1>Anees Kokadan - Portfolio</h1>
-    <img src="./assets/images/ANEEs.png" />
+    <img src="./assets/images/ANEES.png" />
     <br>
     <h2>Professional Summary</h2>
     <p>Experienced Smartphone Service Engineer with over 11 years of vast and diversified experience. Skilled at Smartphone technology training, greeting customers, checking warranty documents, asking customers about malfunctions, diagnosing technical problems, ordering replacement parts, performing repairs, updating mobile phone software, and writing service reports. Proven history of successful execution in complex, multi-faceted, highly competitive environments. Looking forward to leveraging my strong creative thinking, preventive maintenance, client relationship management, customer service, smartphone software troubleshooting, communication systems, technical support, hardware, electronics equipment, software repair & flashing, schematic diagrams and collaboration skills to exceed organizational goals.</p>
