--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@ Technology Trainer
     
 <hr />
 
-
+<a href ="./public/about.html">About Me</a>
+<a href ="./public/contact.html">Contact Me</a>
+  
 
 
 
