--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anees Kokadan</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
  </head>
  <body>
     <h1>Anees Kokadan - Portfolio</h1>
-    <img src="./assets/images/ANEES.png" />
+
+
+ 
+    <img class ="profile_photo" src="./assets/images/ANEEs.png" />
+   
+
+
+
     <br>
     <h2>Professional Summary</h2>
-    <p>Experienced Smartphone Service Engineer with over 11 years of vast and diversified experience. Skilled at Smartphone technology training, greeting customers, checking warranty documents, asking customers about malfunctions, diagnosing technical problems, ordering replacement parts, performing repairs, updating mobile phone software, and writing service reports. Proven history of successful execution in complex, multi-faceted, highly competitive environments. Looking forward to leveraging my strong creative thinking, preventive maintenance, client relationship management, customer service, smartphone software troubleshooting, communication systems, technical support, hardware, electronics equipment, software repair & flashing, schematic diagrams and collaboration skills to exceed organizational goals.</p>
+    <p class="Summary">Experienced Smartphone Service Engineer with over 11 years of vast and diversified experience. Skilled at Smartphone technology training, greeting customers, checking warranty documents, asking customers about malfunctions, diagnosing technical problems, ordering replacement parts, performing repairs, updating mobile phone software, and writing service reports. Proven history of successful execution in complex, multi-faceted, highly competitive environments. Looking forward to leveraging my strong creative thinking, preventive maintenance, client relationship management, customer service, smartphone software troubleshooting, communication systems, technical support, hardware, electronics equipment, software repair & flashing, schematic diagrams and collaboration skills to exceed organizational goals.</p>
     
     <h2>Key Achievements</h2>
     <ul>
         <li>Senior Technician Membership – Institution of Engineers India IEI (Membership No: ST718740-3)</li>
-        <li>My Online Unlocking website: lockexit.com | Admin at lockexit.com.</li>
-        <li>My personal website: aneeskokadan.com</li>
-        <li>My blog: gsmdownloader.blogspot.com</li>
+        <li>My Online Unlocking website:  Admin at <a href="https://lockexit.com/">lockexit.com</a></li>
+        <li>My personal website: <a href="https://aneeskokadan.com/">aneeskokadan.com</a></li>
+        <li>My blog: <a href="https://gsmdownloader.blogspot.com/">gsmdownloader</a></li>
    
     </ul>
 
@@ -206,9 +214,7 @@ Technology Trainer
     
 <hr />
 
-<a href ="./public/about.html">About Me</a>
-<a href ="./public/contact.html">Contact Me</a>
-  
+
 
 
 
