photo name changed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
  
-    <img class ="profile_photo" src="./assets/images/ANEEs.png" />
+    <img class ="profile_photo" src="./assets/images/ANEES.png" />
    
 
 
