--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@ Technology Trainer
     
 <hr />
 
-
-
-
+<div id="center">
+<a href="https://aneeskokadan.com/">aneeskokadan.com</a>
+</div>
 
 
 
